tests/behavior/success/null_pointer_arithmetic.bz
function main()
{
	mut p: ?*i32 = null;

	if (p + 0 != null) unreachable;
	if (0 + p != null) unreachable;
	p += 0;
	if (p != null) unreachable;
	if (p - 0 != null) unreachable;
	p -= 0;
	if (p != null) unreachable;
	if (p - (null as ?*i32) != 0) unreachable;
	if ((null as ?*i32) - p != 0) unreachable;
}
