tests/behavior/error/null_pointer_arithmetic2.bz
function main()
{
	mut p: ?*int32 = null;
	--p;
}
